style.css
@import url("https://fonts.googleapis.com/css2?family=Galindo&family=Press+Start+2P&display=swap");
html,
body {
  height: 100%;
  margin: 0;
  padding: 0;
}
body {
  background-color: #313638;
  font-family: "Galindo", sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #e8e9eb;
  text-align: center;
  display: flex;
  justify-content: center;
}
#loader {
  position: fixed;
  width: 100%;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%) translateY(0);
  transition: transform 1s ease, opacity 1s ease;
  height: 100%;
  background: #e0dfd5;
  color: #313638;
  flex-direction: column;
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 9999;
  font-family: "Press Start 2P", system-ui;
}
@media (max-width: 600px) {
  ul {
    flex-direction: column; /* stack items vertically */
    align-items: stretch;   /* optional */
  }
}
#loader h1 {
  margin: 2rem 0;
}
#loader.hidden {
  transform: translate(-50%, -50%) translateY(-100%);
}
#content {
  padding: 2rem;
  margin: 1rem 0;
  width: 90%;
}
ul {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  list-style: none;
}
h1 {
  vertical-align: middle;
}

li {
  padding: 1.5rem;
  margin: 1rem;
  background-color: #f06543;
  box-shadow: 0.5rem 0.5rem #e0dfd5;
}

#box {
  margin: 0 0 3rem 0;
}

#loader span {
  width: 5rem;
  aspect-ratio: 1;
  display: grid;
  border: 4px solid #0000;
  border-radius: 50%;
  border-color: #313638 #0000;
  animation: animate 1s infinite linear;
}
#loader span::before,
#loader span::after {
  content: "";
  grid-area: 1/1;
  margin: 2px;
  border: inherit;
  border-radius: 50%;
}
#loader span::before {
  border-color: #f06543 #0000;
  animation: inherit;
  animation-duration: 0.5s;
  animation-direction: reverse;
}
#loader span::after {
  margin: 8px;
}
@keyframes animate {
  100% {
    transform: rotate(1turn);
  }
}
a {
  padding: 2rem;
}

